--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "personal",
+  "homePage":"https://awabsaif.github.io/Personal/",
   "private": true,
   "homepage": "https://github.com/AwabSaif/personal.git",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+     
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
